# freeproxy-world-scraper

./: .gitignore  AGENTS.md  README.md  config.yml
.github/workflows/: ci.yml
checker/: index.js  package.json  pnpm-lock.yaml  proxyInspector.js
data/: checked.json  checked.txt  cn_checked.txt  cn_raw.txt  raw.txt
scraper/: fetch_cn.py  fetch_other.py  freeproxy_world_scraper.py  main.py  pyproject.toml
