[project]
name = "scraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "country-converter>=1.3.2",
    "curl-cffi>=0.15.0",
    "html5lib>=1.1",
    "lxml>=6.1.1",
    "pyautogui>=0.9.54",
    "pycountry>=26.2.16",
    "pyyaml>=6.0.3",
    "requests[socks]>=2.34.2",
    "seleniumbase>=4.49.7",
]
